# ezmidi

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
docs/: Doxyfile  conf.py  index.rst
include/: ezmidi.h
include/ezmidi/: ezmidi.h
include/ezmidi/private/: event.h  message_processor.h  midi.h
sample/: read_notes.cpp
sample/desktop/: CMakeLists.txt  advanced.cpp  basic.c  common.c  common.h  read_notes.cpp
sample/ios/: AppDelegate.h  AppDelegate.m  CMakeLists.txt  Main.storyboard  ViewController.h  ViewController.m  main.m
scripts/: make_header_only.py
src/: CMakeLists.txt  alsa.cpp  common.cpp  coremidi.cpp  event.cpp  event.h  message_processor.cpp  message_processor.h  midi.h  windows.cpp
test/: CMakeLists.txt  header_only.cpp  test_notes.cpp  test_queue.cpp
